JS functionality done

--- a/index.html
+++ b/index.html
@@ -5,31 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet"/>
     <title>Calculator</title>
 </head>
 
 <body>
     <div class="cal">
         <div class="keys">
-            <h2 id="value">12345</h2>
-            <span id="del" class="op">DEL</span>
-            <span class="op">/</span>
-            <span class="op">*</span>
-            <span>7</span>
-            <span>8</span>
-            <span>9</span>
-            <span id="add" class="op">+</span>
-            <span>4</span>
-            <span>5</span>
-            <span>6</span>
-            <span>1</span>
-            <span>2</span>
-            <span>3</span>
-            <span class="op">-</span>
-            <span>.</span>
-            <span>0</span>
-            <span id="equal">=</span>
+            <input type="text" class="input" id="value">
+            <span id="del" class=" key">DEL</span>
+            <span class=" key">/</span>
+            <span class=" key">*</span>
+            <span class="key">7</span>
+            <span class="key">8</span>
+            <span class="key">9</span>
+            <span id="add" class="key">+</span>
+            <span class="key">4</span>
+            <span class="key">5</span>
+            <span class="key">6</span>
+            <span class="key">1</span>
+            <span class="key">2</span>
+            <span class="key">3</span>
+            <span class="op key">-</span>
+            <span class="key">.</span>
+            <span class="key">0</span>
+            <span id="equal" class="key">=</span>
         </div>
     </div>
 
